Fixed: changed value for endgame in js, removed visibility for end game in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,8 +177,6 @@ li {
 }
 
 #end-game {
-    visibility: hidden;
-
     display: flex;
     flex-direction: column;
     align-items: center;
